# jobs

./: .gitignore  Taskfile.yml  classes.yml  environment.yml  jobs-0.1.1-py3-none-any.whl  jobs-0.1.2-py3-none-any.whl  jobs.db  jobs.xlsx  pyproject.toml  requirments.txt  settings.yaml
.well-known/: web-app-origin-association
app/: __init__.py  cli.py  config.py  main.py
app/core/: country.py  s3.py
app/database/: __init__.py  enums.py  export.py  fields.py  models.py
app/database/models/: __init__.py  base.py  company.py  cv.py  event.py  job.py  location.py  position.py
app/firebase/: auth.py  service_account.py
app/prompts/: events.py  jobs.py
app/routers/: api.py  auth.py  models.py
html/linkedin/: 4280413860.html  4287936064.html  4289238633.html
src/jobs/: __init__.py  cli.py  config.py  main.py
src/jobs/cli/: __init__.py  __main__.py
src/jobs/cli/commands/: job.py
src/jobs/cli/prompts/: __init__.py  events.py  job.py  jobs.py
src/jobs/core/: pdf.py  s3.py
src/jobs/database/: __init__.py  database.py  enums.py  export.py  fields.py
src/jobs/database/models/: __init__.py  base.py  company.py  cover_letter.py  cv.py  event.py  job.py  location.py  position.py  skill.py  user.py
src/jobs/firebase/: db.py  service_account.py
src/jobs/masha/: models.py  skills.py
src/jobs/prompts/: events.py
src/jobs/routers/: api.py  auth.py  models.py
src/version_scheme_code/: setup.py
